fixed scrollbar appearance by deactivating padding reset in forms that are nested inside formoptions. see #38320

--- a/src/elements/Form/Form.scss
+++ b/src/elements/Form/Form.scss
@@ -100,6 +100,11 @@ $default_form_center_width: 360px; //TODO replace $form_data_field_input_max_wid
 
     .cui-form-options-table {
 
+        .cui-form {
+            //no padding reset supporte inside options
+            margin: 0 !important;
+        }
+
         .cui-checkbox {
             margin-right: $grid_size;
         }
